# FRY_Downloader

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
lib/: app.dart  main.dart
lib/src/models/: download_item.dart
lib/src/providers/: downloads_provider.dart  settings_provider.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: downloader.dart  types.dart
lib/src/screens/: home_screen.dart  settings_screen.dart
lib/src/screens/widgets/: download_item_card.dart  format_picker_sheet.dart  url_input_card.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: downloader.rs  mod.rs  types.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
